--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-mobile-store-button": "0.0.6",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0"
   },
