--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-mobile-store-button": "0.0.6",
     "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.1.0"
   },
   "scripts": {
