Add copy to clipboard on sidebar

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "exit-intent": "^1.1.0",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-mobile-store-button": "0.0.6",
     "react-scripts": "3.4.1",
