--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-mobile-store-button": "0.0.6",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
